fix: index page overflow x

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,5 +1,5 @@
 .container {
-  width: 100%;
+  width: calc(100% - 142px);
   height: 100%;
   padding-left: 142px;
   display: flex;
